DDF-4035 Constraining java.ext.dirs to java home in external Solr (#3814)